[gd_scene load_steps=34 format=2]

[ext_resource path="res://MainMenu/Nute.png" type="Texture" id=1]
[ext_resource path="res://MainMenu/Paused.png" type="Texture" id=2]
[ext_resource path="res://MainMenu/Paused.gd" type="Script" id=3]
[ext_resource path="res://MainMenu/bionicle-training-card-font-2-4.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://MainMenu/Play.png" type="Texture" id=5]
[ext_resource path="res://MainMenu/Menu.png" type="Texture" id=6]
[ext_resource path="res://Music and Sounds/Menu Select.wav" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=24]
size = 14
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0, 0, 0, 0.196078 )

[sub_resource type="DynamicFont" id=26]
size = 14
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 14
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.196078 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.392157 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 32, 32 )
modulate_color = Color( 0.345098, 0.333333, 0.411765, 1 )

[sub_resource type="StyleBoxTexture" id=27]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 32, 32 )
modulate_color = Color( 0.290196, 0.278431, 0.333333, 1 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0, 0, 0, 0.0980392 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0, 0, 0, 0.196078 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0, 0, 0, 0 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 32, 32 )

[sub_resource type="StyleBoxTexture" id=28]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 32, 32 )
modulate_color = Color( 0.815686, 0.815686, 0.815686, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0, 0, 0, 0.0980392 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0, 0, 0, 0.196078 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0, 0, 0, 0 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 30, 30 )
modulate_color = Color( 0.345098, 0.333333, 0.411765, 1 )

[sub_resource type="StyleBoxTexture" id=29]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 30, 30 )
modulate_color = Color( 0.290196, 0.278431, 0.333333, 1 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0, 0, 0, 0.0980392 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0, 0, 0, 0.196078 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0, 0, 0, 0 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[node name="Paused" type="Node2D"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 5.0
margin_top = -3.0
margin_right = 325.0
margin_bottom = 205.0
texture = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="."]
margin_left = 110.0
margin_top = 10.0
margin_right = 210.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 1 )
text = "Paused"
align = 1
valign = 1

[node name="Resume1" type="Label" parent="."]
visible = false
margin_left = 110.0
margin_top = 116.0
margin_right = 210.0
margin_bottom = 141.0
custom_fonts/font = SubResource( 24 )
custom_styles/normal = SubResource( 25 )
align = 1
valign = 1

[node name="Resume2" type="Label" parent="."]
visible = false
margin_left = 110.0
margin_top = 116.0
margin_right = 210.0
margin_bottom = 141.0
custom_fonts/font = SubResource( 26 )
text = "Resume"
align = 1
valign = 1

[node name="ResumeCon" type="MarginContainer" parent="."]
margin_left = 95.0
margin_top = 115.0
margin_right = 225.0
margin_bottom = 140.0

[node name="Resume_Button" type="Button" parent="ResumeCon"]
margin_right = 130.0
margin_bottom = 25.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Resume"

[node name="Music2" type="Label" parent="."]
margin_left = 205.0
margin_top = 55.0
margin_right = 236.0
margin_bottom = 86.0
custom_styles/normal = SubResource( 6 )

[node name="Music3" type="Label" parent="."]
margin_left = 203.0
margin_top = 52.0
margin_right = 239.0
margin_bottom = 88.0
custom_styles/normal = SubResource( 7 )

[node name="Music4" type="Label" parent="."]
visible = false
margin_left = 203.0
margin_top = 52.0
margin_right = 239.0
margin_bottom = 88.0
custom_styles/normal = SubResource( 27 )

[node name="MusicCon" type="MarginContainer" parent="."]
margin_left = 204.0
margin_top = 54.0
margin_right = 236.0
margin_bottom = 86.0

[node name="Music_Button" type="Button" parent="MusicCon"]
margin_right = 32.0
margin_bottom = 32.0
focus_mode = 0
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
icon_align = 1
expand_icon = true

[node name="MusicOff" type="ColorRect" parent="."]
visible = false
margin_left = 208.0
margin_top = 54.0
margin_right = 249.0
margin_bottom = 59.0
rect_rotation = 44.9999
color = Color( 0.27451, 0.266667, 0.32549, 1 )

[node name="MainMenu2" type="Label" parent="."]
margin_left = 142.0
margin_top = 53.0
margin_right = 176.0
margin_bottom = 87.0
custom_styles/normal = SubResource( 8 )

[node name="MainMenu3" type="Label" parent="."]
margin_left = 140.0
margin_top = 52.0
margin_right = 177.0
margin_bottom = 89.0
custom_styles/normal = SubResource( 9 )

[node name="MainMenu4" type="Label" parent="."]
visible = false
margin_left = 140.0
margin_top = 52.0
margin_right = 177.0
margin_bottom = 89.0
custom_styles/normal = SubResource( 28 )

[node name="mainCon" type="MarginContainer" parent="."]
margin_left = 143.0
margin_top = 54.0
margin_right = 175.0
margin_bottom = 86.0

[node name="MainMenu_Button" type="Button" parent="mainCon"]
margin_right = 32.0
margin_bottom = 32.0
focus_mode = 0
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
icon_align = 1
expand_icon = true

[node name="NewGame2" type="Label" parent="."]
margin_left = 81.0
margin_top = 55.0
margin_right = 114.0
margin_bottom = 88.0
custom_styles/normal = SubResource( 10 )

[node name="NewGame3" type="Label" parent="."]
margin_left = 79.0
margin_top = 54.0
margin_right = 116.0
margin_bottom = 90.0
custom_styles/normal = SubResource( 11 )

[node name="NewGame4" type="Label" parent="."]
visible = false
margin_left = 79.0
margin_top = 54.0
margin_right = 116.0
margin_bottom = 90.0
custom_styles/normal = SubResource( 29 )

[node name="newCon" type="MarginContainer" parent="."]
margin_left = 81.0
margin_top = 55.0
margin_right = 113.0
margin_bottom = 87.0

[node name="NewGame_Button" type="Button" parent="newCon"]
margin_right = 32.0
margin_bottom = 32.0
focus_mode = 0
custom_styles/hover = SubResource( 21 )
custom_styles/pressed = SubResource( 22 )
custom_styles/normal = SubResource( 23 )
icon_align = 1
expand_icon = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 15.0

[connection signal="button_up" from="ResumeCon/Resume_Button" to="." method="_on_Resume_Button_button_up"]
[connection signal="pressed" from="MusicCon/Music_Button" to="." method="_on_Music_Button_pressed"]
[connection signal="button_up" from="mainCon/MainMenu_Button" to="." method="_on_MainMenu_Button_button_up"]
[connection signal="button_up" from="newCon/NewGame_Button" to="." method="_on_NewGame_Button_button_up"]
